--- a/05_LLM_Analyzing.html
+++ b/05_LLM_Analyzing.html
@@ -35,14 +35,14 @@
 </head>
 <body>
     <div class="screen-container">
-        <div class="status-bar flex justify-between items-center text-base p-3 border-b-0">
-            <div class="flex items-center space-x-4"> <i class="fab fa-bluetooth-b text-blue-500 fa-lg"></i> <i class="fas fa-wifi text-green-500 fa-lg"></i> </div>
+        <div class="status-bar flex justify-between items-center text-sm p-2 border-b-0"> 
+            <div class="flex items-center space-x-3"> <i class="fab fa-bluetooth-b text-blue-500"></i> <i class="fas fa-wifi text-green-500"></i> </div>
             <span>19:30</span>
-            <div class="flex items-center"> <i class="fas fa-battery-three-quarters fa-lg"></i> </div>
+            <div class="flex items-center"> <i class="fas fa-battery-three-quarters"></i> </div>
         </div>
-        <div class="content-area justify-center">
+        <div class="content-area justify-center items-center flex-col py-4 px-4"> 
 
-            <svg class="w-20 h-20 mb-6 mx-auto" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-16 h-16 mb-4 mx-auto" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"> 
                 <defs>
                     <linearGradient id="aiGrad" x1="0%" y1="0%" x2="100%" y2="100%">
                         <stop offset="0%" style="stop-color:#3b82f6;stop-opacity:1" />
@@ -71,15 +71,15 @@
                 </g>
             </svg>
 
-            <h2 class="text-xl font-light mb-4">AI分析中...</h2>
+            <h2 class="text-lg font-light mb-3">AI分析中...</h2> 
 
-             <div class="flex justify-center items-center space-x-2">
+             <div class="flex justify-center items-center space-x-1.5 mb-3"> 
                 <span class="brainwave-dot"></span>
                 <span class="brainwave-dot"></span>
                 <span class="brainwave-dot"></span>
             </div>
 
-            <p class="text-xl font-semibold text-gray-300 mt-4">正在生成个性化解读</p>
+            <p class="text-lg font-semibold text-gray-300 mt-2">正在生成个性化解读</p> 
 
             </div>
     </div>
