--- a/10_Answer_And_Speaking.html
+++ b/10_Answer_And_Speaking.html
@@ -23,17 +23,17 @@
 </head>
 <body>
     <div class="screen-container">
-        <div class="status-bar flex justify-between items-center text-base p-3 border-b-0">
-            <div class="flex items-center space-x-4"> <i class="fab fa-bluetooth-b text-blue-500 fa-lg"></i> <i class="fas fa-wifi text-green-500 fa-lg"></i> </div>
+        <div class="status-bar flex justify-between items-center text-sm p-2 border-b-0"> 
+            <div class="flex items-center space-x-3"> <i class="fab fa-bluetooth-b text-blue-500"></i> <i class="fas fa-wifi text-green-500"></i> </div>
             <span>18:39</span>
-            <div class="flex items-center"> <i class="fas fa-battery-three-quarters fa-lg"></i> </div>
+            <div class="flex items-center"> <i class="fas fa-battery-three-quarters"></i> </div>
         </div>
-        <div class="content-area flex flex-col justify-between pt-6 pb-4">
-            <p class="text-sm text-gray-400 mb-4 w-full text-left italic">您问: "相比于去年胖了吗?"</p>
+        <div class="content-area flex flex-col justify-between pt-3 pb-2 px-3"> 
+            <p class="text-xs text-gray-400 mb-2 w-full text-left italic">您问: "相比于去年胖了吗?"</p> 
             <div class="flex flex-col items-center justify-center flex-grow">
-                <i class="fas fa-volume-high fa-4x text-cyan-400 mb-4 animate-subtle-pulse"></i>
-                <h2 class="text-lg font-light mb-4 text-gray-300">播报中...</h2>
-                <div class="flex justify-center items-end h-10 space-x-1">
+                <i class="fas fa-volume-high fa-2x text-cyan-400 mb-2 animate-subtle-pulse"></i> 
+                <h2 class="text-base font-light mb-2 text-gray-300">播报中...</h2> 
+                <div class="flex justify-center items-end h-6 space-x-0.5"> 
                     <span class="audio-bar"></span> <span class="audio-bar"></span> <span class="audio-bar"></span>
                     <span class="audio-bar"></span> <span class="audio-bar"></span>
                 </div>
