--- a/10b_QA_Listening_Round2.html
+++ b/10b_QA_Listening_Round2.html
@@ -22,17 +22,19 @@
 </head>
 <body>
     <div class="screen-container">
-        <div class="status-bar flex justify-between items-center text-base p-3 border-b-0">
-           <div class="flex items-center space-x-4"> <i class="fab fa-bluetooth-b text-blue-500 fa-lg"></i> <i class="fas fa-wifi text-green-500 fa-lg"></i> </div>
-            <span>18:40</span> <div class="flex items-center"> <i class="fas fa-battery-three-quarters fa-lg"></i> </div>
+        <div class="status-bar flex justify-between items-center text-sm p-2 border-b-0"> 
+           <div class="flex items-center space-x-3"> <i class="fab fa-bluetooth-b text-blue-500"></i> <i class="fas fa-wifi text-green-500"></i> </div>
+            <span>18:40</span> <div class="flex items-center"> <i class="fas fa-battery-three-quarters"></i> </div>
         </div>
-        <div class="content-area justify-center">
-            <i class="fas fa-microphone-alt fa-4x text-blue-400 mb-6 animate-subtle-pulse"></i>
-            <h2 class="text-xl font-light mb-4">还在听...</h2> <div class="flex justify-center items-end h-10 space-x-1">
+        <div class="content-area justify-center items-center py-4 px-4"> 
+            <i class="fas fa-microphone-alt fa-3x text-blue-400 mb-3 animate-subtle-pulse"></i> 
+            <h2 class="text-lg font-light mb-3">还在听...</h2> 
+            <div class="flex justify-center items-end h-8 space-x-1 mb-3"> 
                 <span class="audio-bar"></span> <span class="audio-bar"></span> <span class="audio-bar"></span>
                 <span class="audio-bar"></span> <span class="audio-bar"></span>
             </div>
-            <p class="text-sm text-gray-400 mt-8">请继续提问</p> <p class="text-xs text-gray-500 mt-1">(由 "小乐、小乐" 触发)</p>
+            <p class="text-xs text-gray-400 mt-2">请继续提问</p> 
+            <p class="text-xs text-gray-500 mt-0.5">(由 "小乐、小乐" 触发)</p> 
         </div>
     </div>
     <div class="external-nav flex justify-center items-center space-x-4 mt-6">
