--- a/12_Error.html
+++ b/12_Error.html
@@ -18,15 +18,16 @@
 </head>
 <body>
     <div class="screen-container">
-        <div class="status-bar flex justify-between items-center text-base p-3 border-b-0"> <div class="flex items-center space-x-4"> <i class="fab fa-bluetooth-b fa-lg"></i> <i class="fas fa-wifi fa-lg"></i> </div>
+        <div class="status-bar flex justify-between items-center text-sm p-2 border-b-0"> 
+            <div class="flex items-center space-x-3"> <i class="fab fa-bluetooth-b"></i> <i class="fas fa-wifi"></i> </div>
             <span>00:03</span> <div class="flex items-center">
-                <i class="fas fa-battery-three-quarters fa-lg"></i> </div>
+                <i class="fas fa-battery-three-quarters"></i> </div>
         </div>
-        <div class="content-area justify-center">
-            <i class="fas fa-exclamation-triangle fa-4x text-red-500 mb-6 animate-fade-in"></i>
-            <h2 class="text-xl font-semibold text-red-400 mb-2">测量错误</h2>
-            <p class="text-sm text-gray-300 px-6"> 无法完成测量。请确保双脚裸露并正确踩在电极片上，测量过程中请保持静止。 </p>
-             <p class="text-xs text-gray-500 mt-8">即将返回待机界面...</p>
+        <div class="content-area justify-center items-center py-3 px-4"> 
+            <i class="fas fa-exclamation-triangle fa-3x text-red-500 mb-3 animate-fade-in"></i> 
+            <h2 class="text-lg font-semibold text-red-400 mb-1">测量错误</h2> 
+            <p class="text-xs text-gray-300 px-2 text-center leading-tight mb-3"> 无法完成测量。请确保双脚裸露并正确踩在电极片上，测量过程中请保持静止。 </p> 
+             <p class="text-xs text-gray-500 mt-2">即将返回待机界面...</p> 
         </div>
     </div>
 
