--- a/13_Shutdown.html
+++ b/13_Shutdown.html
@@ -18,13 +18,14 @@
 </head>
 <body>
     <div class="screen-container animate-fade-out">
-        <div class="status-bar flex justify-between items-center text-base p-3 border-b-0 opacity-50"> <div class="flex items-center space-x-4"> <i class="fab fa-bluetooth-b fa-lg"></i> <i class="fas fa-wifi fa-lg"></i> </div>
+        <div class="status-bar flex justify-between items-center text-sm p-2 border-b-0 opacity-50"> 
+            <div class="flex items-center space-x-3"> <i class="fab fa-bluetooth-b"></i> <i class="fas fa-wifi"></i> </div>
             <span>00:03</span> <div class="flex items-center">
-                <i class="fas fa-battery-three-quarters fa-lg"></i> </div>
+                <i class="fas fa-battery-three-quarters"></i> </div>
         </div>
-        <div class="content-area justify-center">
-            <i class="fas fa-power-off fa-4x text-gray-500 mb-6"></i>
-            <h2 class="text-xl font-light text-gray-400">正在关机...</h2>
+        <div class="content-area justify-center items-center py-4 px-4"> 
+            <i class="fas fa-power-off fa-3x text-gray-500 mb-3"></i> 
+            <h2 class="text-lg font-light text-gray-400">正在关机...</h2> 
         </div>
     </div>
 
