--- a/14_Low_Battery.html
+++ b/14_Low_Battery.html
@@ -18,14 +18,15 @@
 </head>
 <body>
     <div class="screen-container">
-        <div class="status-bar flex justify-between items-center text-base p-3 border-b-0"> <div class="flex items-center space-x-4"> <i class="fab fa-bluetooth-b fa-lg"></i> <i class="fas fa-wifi fa-lg"></i> </div>
-            <span>00:03</span> <div class="flex items-center text-red-500"> <i class="fas fa-battery-quarter fa-beat fa-lg"></i> </div>
+        <div class="status-bar flex justify-between items-center text-sm p-2 border-b-0"> 
+            <div class="flex items-center space-x-3"> <i class="fab fa-bluetooth-b"></i> <i class="fas fa-wifi"></i> </div>
+            <span>00:03</span> <div class="flex items-center text-red-500"> <i class="fas fa-battery-quarter fa-beat"></i> </div> 
         </div>
-        <div class="content-area justify-center">
-            <i class="fas fa-battery-empty fa-5x text-red-500 mb-6 animate-pulse"></i>
-            <h2 class="text-xl font-semibold text-red-400 mb-2">电量低</h2>
-            <p class="text-sm text-gray-300 px-6"> 请尽快为设备充电。 </p>
-             <p class="text-xs text-gray-500 mt-8">设备可能自动关机。</p>
+        <div class="content-area justify-center items-center py-3 px-4"> 
+            <i class="fas fa-battery-empty fa-3x text-red-500 mb-3 animate-pulse"></i> 
+            <h2 class="text-lg font-semibold text-red-400 mb-1">电量低</h2> 
+            <p class="text-xs text-gray-300 px-2 text-center leading-tight mb-3"> 请尽快为设备充电。 </p> 
+             <p class="text-xs text-gray-500 mt-2">设备可能自动关机。</p> 
         </div>
     </div>
 
