--- a/01_Boot_Welcome.html
+++ b/01_Boot_Welcome.html
@@ -15,7 +15,7 @@
         .external-nav a i { margin-right: 0.3rem; }
         .external-nav a.disabled { opacity: 0.5; cursor: not-allowed; pointer-events: none; background-color: #f3f4f6; box-shadow: none; }
         /* --- Screen-Specific Animation Styles --- */
-        .dots-container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; width: 6rem; height: 6rem; margin-bottom: 1.5rem; margin-left: auto; margin-right: auto; animation: rotate-scale 2s linear infinite; }
+        .dots-container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 0.5rem; width: 4rem; height: 4rem; margin-bottom: 1rem; margin-left: auto; margin-right: auto; animation: rotate-scale 2s linear infinite; }
         .dot { width: 100%; height: 100%; border-radius: 50%; }
         @keyframes rotate-scale { 0% { transform: rotate(0deg) scale(1); } 50% { transform: rotate(180deg) scale(0.7); } 100% { transform: rotate(360deg) scale(1); } }
         /* Style for clickable area - Now targets body */
@@ -25,13 +25,13 @@
     </style>
 </head>
 <body> <div class="screen-container">
-        <div class="content-area justify-center items-center">
+        <div class="content-area justify-center items-center py-8"> 
             <div id="dotsContainer" class="dots-container">
                 <div class="dot bg-slate-700"></div> <div class="dot bg-orange-500"></div>
                 <div class="dot bg-emerald-500"></div> <div class="dot bg-red-500"></div>
             </div>
             <div id="welcomeText" class="text-center opacity-0 transition-opacity duration-500 ease-in-out">
-                <h1 class="text-3xl font-semibold mt-4">AI智能语音体脂秤</h1>
+                <h1 class="text-2xl font-semibold mt-2">AI智能语音体脂秤</h1> 
             </div>
         </div>
     </div>
