--- a/03_Detecting_Weight.html
+++ b/03_Detecting_Weight.html
@@ -23,21 +23,21 @@
     </style>
 </head>
 <body> <div class="screen-container">
-        <div class="status-bar flex justify-between items-center text-base p-3 border-b-0">
-            <div class="flex items-center space-x-4"> <i class="fab fa-bluetooth-b text-blue-500 fa-lg"></i> <i class="fas fa-wifi text-green-500 fa-lg"></i> </div>
-            <span>11:40</span> <div class="flex items-center"> <i class="fas fa-battery-three-quarters fa-lg"></i> </div>
+        <div class="status-bar flex justify-between items-center text-sm p-2 border-b-0"> 
+            <div class="flex items-center space-x-3"> <i class="fab fa-bluetooth-b text-blue-500"></i> <i class="fas fa-wifi text-green-500"></i> </div>
+            <span>11:40</span> <div class="flex items-center"> <i class="fas fa-battery-three-quarters"></i> </div>
         </div>
-        <div class="content-area justify-between relative">
-             <div class="flex flex-col items-center justify-center flex-grow relative pt-5">
-                 <div id="weightDisplayContainer" class="text-center text-blue-400">
-                    <span id="weightInteger" class="text-[8rem] font-medium tracking-tight leading-none">0</span>
-                    <span id="weightDecimal" class="text-[4rem] font-medium tracking-tight leading-none ml-1">.00</span>
+        <div class="content-area flex flex-col justify-center items-center py-4 px-2"> 
+             <div class="flex flex-col items-center justify-center mb-3"> 
+                 <div id="weightDisplayContainer" class="text-center text-blue-400 relative"> 
+                    <span id="weightInteger" class="text-[5rem] font-medium tracking-tight leading-none">0</span> 
+                    <span id="weightDecimal" class="text-[2.5rem] font-medium tracking-tight leading-none ml-1">.00</span> 
+                    <span class="absolute bottom-1 right-[-1.8em] text-xl font-light text-gray-200">kg</span> 
                  </div>
-                 <span class="absolute top-1/3 right-4 text-3xl font-light text-gray-200 transform -translate-y-1/2">kg</span>
              </div>
-            <div class="text-center pb-4 w-full">
-                 <p id="statusText" class="text-xl font-semibold text-gray-300">测量中...</p>
-                 <p id="promptText" class="text-lg text-gray-400 mt-1">请保持稳定</p>
+            <div class="text-center"> 
+                 <p id="statusText" class="text-lg font-semibold text-gray-300">测量中...</p> 
+                 <p id="promptText" class="text-base text-gray-400 mt-1">请保持稳定</p> 
             </div>
         </div>
     </div>
